--- a/pages/statics/distance/distance.wxml
+++ b/pages/statics/distance/distance.wxml
@@ -1,11 +1,12 @@
-<!--pages/monitor/monitor.wxml-->
+<!--pages/statics/distance/distance.wxml-->
+<!-- <view style='height:50vh;width:100vw;'>
+  <ec-canvas ec="{{ ec }}" ></ec-canvas>
+</view> -->
 <view>
-  <map id="myMap" style="width: 100%; height: 100vh;" markers="{{markers}}" covers="{{covers}}" show-location latitude="{{latitude}}" longitude="{{longitude}}" polyline="{{polylines}}"></map>
-
-  <view class="float_menu">
-    <image src="../../images/ic_vehicle_list.png" style="height:70rpx;width:70rpx;margin:4rpx;" bindtap="vehicleListClick"></image>
-    <image src="../../images/ic_locate.png" style="height:70rpx;width:70rpx;margin:4rpx;" bindtap="myLocationClick"></image>
+  <view style='height:50vh;width:100vw;'>
+    <ec-canvas ec="{{ ec }}"></ec-canvas>
   </view>
+  <i-button type="primary" bind:click="vehicleListClick">车辆列表</i-button>
 </view>
 <i-drawer mode="right" visible="{{isListShow}}" bind:close="vehicleListClick">
   <scroll-view class="drawer-container" scroll-y>
@@ -16,7 +17,7 @@
         </view>
         <view slot="content">
           <i-cell-group>
-            <i-cell wx:for="{{myVehicles}}" wx:for-index="index" wx:for-item="item" wx:key="key" is-link  data-vehicle="{{item}}">
+            <i-cell wx:for="{{myVehicles}}" wx:for-index="index" wx:for-item="item" wx:key="key" is-link bind:click="vehicleItemClick" data-vehicle="{{item}}">
               <i-row>
                 <i-col span="12">
                   <text>{{item.plateNo}}</text>
@@ -25,14 +26,6 @@
               <i-row>
                 <i-col span="24">
                   <text>{{item.vin}}</text>
-                </i-col>
-              </i-row>
-              <i-row>
-                <i-col span="5">
-                  <text bindtap="vehicleItemMonitorClick" data-vehicle="{{item}}">监控</text>
-                </i-col>
-                <i-col span="5">
-                  <text bindtap="vehicleItemDetailsClick" data-index="{{item.id}}">详情</text>
                 </i-col>
               </i-row>
             </i-cell>
@@ -45,7 +38,7 @@
         </view>
         <view slot="content">
           <i-cell-group>
-            <i-cell wx:for="{{authVehicles}}" wx:for-index="index" wx:for-item="item" wx:key="key" is-link  data-vehicle="{{item}}">
+            <i-cell wx:for="{{authVehicles}}" wx:for-index="index" wx:for-item="item" wx:key="key" is-link bind:click="vehicleItemClick" data-vehicle="{{item}}">
               <i-row>
                 <i-col span="12">
                   <text>{{item.plateNo}}</text>
