--- a/pages/monitor/monitor.wxss
+++ b/pages/monitor/monitor.wxss
@@ -11,6 +11,10 @@
 	height: 100vh;
 	background:#fff;
 }
+.loc {
+  width: 40rpx;
+  height: 40rpx;
+}
 /* .cell-panel-demo{
     display: block;
 } */
