--- a/pages/obd/obd.wxss
+++ b/pages/obd/obd.wxss
@@ -1,4 +1,4 @@
-/* pages/statics/fuelConsumption/fuelConsumption.wxss */
+/* pages/obd/obd.wxss */
 .drawer-container{
 	width:60vw;
 	height: 100vh;
