--- a/pages/statics/speed/speed.wxml
+++ b/pages/statics/speed/speed.wxml
@@ -1,2 +1,60 @@
-<!--pages/statics/speed/speed.wxml-->
-<text>pages/statics/speed/speed.wxml</text>
+<view>
+  <view style='height:50vh;width:100vw;'>
+    <ec-canvas ec="{{ ec }}"></ec-canvas>
+  </view>
+  <scroll-view style='height:50vh;width:100vw;' scroll-y>
+   <i-sticky scrollTop="{{scrollTop}}">
+      <i-sticky-item wx-if="{{myVehicles != null && myVehicles.length != 0}}">
+        <view slot="title">
+          我的车辆
+        </view>
+        <view slot="content">
+          <i-cell-group>
+            <i-cell wx:for="{{myVehicles}}" wx:for-index="index" wx:for-item="item" wx:key="key" is-link bind:click="vehicleItemClick" data-vehicle="{{item}}">
+              <i-row>
+                <i-col span="12">
+                  <text>{{item.plateNo}}</text>
+                </i-col>
+              </i-row>
+              <i-row>
+                <i-col span="24">
+                  <text>{{item.vin}}</text>
+                </i-col>
+              </i-row>
+            </i-cell>
+          </i-cell-group>
+        </view>
+      </i-sticky-item>
+      <i-sticky-item wx-if="{{authVehicles != null && authVehicles.length != 0}}">
+        <view slot="title">
+          激活码车辆
+        </view>
+        <view slot="content">
+          <i-cell-group>
+            <i-cell wx:for="{{authVehicles}}" wx:for-index="index" wx:for-item="item" wx:key="key" is-link bind:click="vehicleItemClick" data-vehicle="{{item}}">
+              <i-row>
+                <i-col span="12">
+                  <text>{{item.plateNo}}</text>
+                </i-col>
+              </i-row>
+              <i-row>
+                <i-col span="24">
+                  <text>{{item.vin}}</text>
+                </i-col>
+              </i-row>
+            </i-cell>
+          </i-cell-group>
+        </view>
+      </i-sticky-item>
+      <i-sticky-item wx-if="{{myVehicles.length == 0 && authVehicles.length == 0}}">
+        <view slot="title">
+          无车辆
+        </view>
+        <view slot="content">
+          <text>未获取到车辆列表，请绑定激活码</text>
+        </view>
+      </i-sticky-item>
+    </i-sticky>
+  </scroll-view>
+
+</view>
