--- a/pages/statics/distance/distance.wxml
+++ b/pages/statics/distance/distance.wxml
@@ -3,14 +3,12 @@
   <ec-canvas ec="{{ ec }}" ></ec-canvas>
 </view> -->
 <view>
+  <!-- <i-button type="primary" bind:click="vehicleListClick">车辆列表</i-button> -->
   <view style='height:50vh;width:100vw;'>
     <ec-canvas ec="{{ ec }}"></ec-canvas>
   </view>
-  <i-button type="primary" bind:click="vehicleListClick">车辆列表</i-button>
-</view>
-<i-drawer mode="right" visible="{{isListShow}}" bind:close="vehicleListClick">
-  <scroll-view class="drawer-container" scroll-y>
-    <i-sticky scrollTop="{{scrollTop}}">
+  <scroll-view style='height:50vh;width:100vw;' scroll-y>
+  <i-sticky scrollTop="{{scrollTop}}">
       <i-sticky-item wx-if="{{myVehicles != null && myVehicles.length != 0}}">
         <view slot="title">
           我的车辆
@@ -53,6 +51,19 @@
           </i-cell-group>
         </view>
       </i-sticky-item>
+      <i-sticky-item wx-if="{{myVehicles.length == 0 && authVehicles.length == 0}}">
+        <view slot="title">
+          无车辆
+        </view>
+        <view slot="content">
+          <text>未获取到车辆列表，请绑定激活码</text>
+        </view>
+      </i-sticky-item>
     </i-sticky>
   </scroll-view>
-</i-drawer>
+</view>
+<!-- <i-drawer mode="right" visible="{{isListShow}}" bind:close="vehicleListClick">
+  <scroll-view class="drawer-container" scroll-y>
+    
+  </scroll-view>
+</i-drawer> -->
